@@ -59,12 +59,12 @@ class Channel(chn_class.Channel):
                                '(?<title>[^<]+)<'.replace("(?<", "(?P<")
         self._AddDataParser("*", parser=self.folderItemRegex, creator=self.CreateFolderItem)
         self.videoItemRegex = '<a\W+href="/iplayer/episode/(?<url>[^/]+)[^>]+>\W+<div[^>]+>[^>]+' \
-                              '</div>\W+(?:<div[^>]+>[^>]+</div>\W+)?<div class="primary">\W+' \
-                              '<div class="r-image"[^>]+src="(?<thumburl>[^"]+)"[\w\W]{0,500}?<div ' \
-                              'class="secondary">\W+<div[^>]+>(?<title>[^<]+)</div>\W+(?:<div[^>]+>' \
-                              '(?<subtitle>[^<]+)</div>\W+)?<p[^>]*>(?<description>[^<]*)</p>' \
-                              '[\w\W]{0,1000}?(?:<span class="release">\W+First shown: (?<day>\d+) ' \
-                              '(?<month>\w+) (?<year>\d+)|<div class="period")'
+                              '</div>\W+(?:<div[^>]+>[^>]+</div>\W+)?[\w\W]{0,500}?<source ' \
+                              'srcset="(?<thumburl>[^"]+)"[\w\W]{0,500}?<div class="secondary">' \
+                              '\W+<div[^>]+>(?<title>[^<]+)</div>\W+(?:<div[^>]+>(?<subtitle>' \
+                              '[^<]+)</div>\W+)?<p[^>]*>(?<description>[^<]*)</p>[\w\W]{0,1000}?' \
+                              '(?:<span class="release">\W+First shown: (?<day>\d+) (?<month>\w+) ' \
+                              '(?<year>\d+)|<div class="period")'
         self.videoItemRegex = Regexer.FromExpresso(self.videoItemRegex)
         self._AddDataParser("*", parser=self.videoItemRegex, creator=self.CreateVideoItem)
 
