@@ -1,7 +1,8 @@
 ﻿[B]Changelog[/B]
-Fixed: Show BBC items without dates or secondary titles
+Fixed: BBC Changed thumbnail html code
 
 [I]Previous changes[/I]
+Fixed: Show BBC items without dates or secondary titles
 Fixed: BBC iPlayer was not showing episodes due to minor site changes (Fixes #685)
 Fixed: BBC moved their streams around which broke the channel (Fixes #669)
 Fixed: BBC iPlayer regex fixed (Fixes #602)
